# career-transition-decision-support-system

./: README.md  app.py  batch_process.py  career_transition_system.py  main.py  pyproject.toml
templates/: index.html
tests/: test_career_transition_system.py
user_profiles/: enhanced_template.json  template.json
