[tool.poetry]
name = "career-transition-decision-support-system"
version = "0.1.0"
description = ""
authors = ["IndigonaBlue <rdadeveyra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
numpy = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
